src/test/ui/consts/const-fn-mismatch.stderr
error[E0379]: trait fns cannot be declared const
  --> $DIR/const-fn-mismatch.rs:13:5
   |
LL |     const fn f() -> u32 { 22 }
   |     ^^^^^ trait fns cannot be const

error: aborting due to previous error

For more information about this error, try `rustc --explain E0379`.
